--- a/ui/Catalog.form
+++ b/ui/Catalog.form
@@ -12,17 +12,21 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2104859"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="686cf" class="javax.swing.JTable" binding="rows">
             <constraints/>
             <properties>
               <autoCreateRowSorter value="true"/>
+              <background color="-2104859"/>
               <enabled value="true"/>
               <gridColor color="-16777216"/>
               <rowHeight value="30"/>
               <rowSelectionAllowed value="false"/>
+              <selectionBackground color="-2104859"/>
               <showVerticalLines value="false"/>
             </properties>
           </component>
