--- a/ui/Categories.form
+++ b/ui/Categories.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.Categories">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="2ecf3" class="javax.swing.JButton" binding="rollingStockButton" default-binding="true">
+      <component id="6c459" class="javax.swing.JButton" binding="rollingStockButton">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -16,7 +16,7 @@
           <text value="Rolling Stock"/>
         </properties>
       </component>
-      <component id="88cd2" class="javax.swing.JButton" binding="controllersButton" default-binding="true">
+      <component id="560d7" class="javax.swing.JButton" binding="controllersButton">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -24,7 +24,7 @@
           <text value="Controllers"/>
         </properties>
       </component>
-      <component id="60050" class="javax.swing.JButton" binding="locomotivesButton" default-binding="true">
+      <component id="8d191" class="javax.swing.JButton" binding="locomotivesButton">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -32,7 +32,7 @@
           <text value="Locomotives"/>
         </properties>
       </component>
-      <component id="e023e" class="javax.swing.JButton" binding="trackButton" default-binding="true">
+      <component id="e2307" class="javax.swing.JButton" binding="trackButton">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -40,7 +40,7 @@
           <text value="Track"/>
         </properties>
       </component>
-      <component id="41a81" class="javax.swing.JButton" binding="trackPacksButton" default-binding="true">
+      <component id="950a3" class="javax.swing.JButton" binding="trackPacksButton">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -48,7 +48,7 @@
           <text value="Track Packs"/>
         </properties>
       </component>
-      <component id="46191" class="javax.swing.JButton" binding="trainsetsButton" default-binding="true">
+      <component id="5e84a" class="javax.swing.JButton" binding="trainsetsButton">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
