--- a/ui/editUserDetails.form
+++ b/ui/editUserDetails.form
@@ -215,7 +215,7 @@
           <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="CVV:"/>
+          <text value="CVV"/>
         </properties>
       </component>
       <component id="299b7" class="javax.swing.JTextField" binding="cvvField">
@@ -226,16 +226,11 @@
         </constraints>
         <properties/>
       </component>
-      <component id="cc50" class="javax.swing.JLabel" binding="cardTypeLabel">
       <component id="1711e" class="javax.swing.JLabel">
         <constraints>
           <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Card Type:"/>
-        </properties>
-      </component>
-      <component id="15176" class="javax.swing.JTextField" binding="cardTypeField">
           <text value="Card Type"/>
         </properties>
       </component>
