--- a/ui/RegistrationPage.form
+++ b/ui/RegistrationPage.form
@@ -127,7 +127,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="8823c" class="javax.swing.JTextField" binding="countryField">
+      <component id="8823c" class="javax.swing.JTextField" binding="cityField">
         <constraints>
           <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -140,7 +140,7 @@
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Street Name:"/>
+          <text value="Road Name:"/>
         </properties>
       </component>
       <component id="6d3b2" class="javax.swing.JLabel">
@@ -156,7 +156,7 @@
           <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Country:"/>
+          <text value="City:"/>
         </properties>
       </component>
       <component id="dd0dd" class="javax.swing.JButton" binding="registerButton" default-binding="true">
