--- a/ui/editUserDetails.form
+++ b/ui/editUserDetails.form
@@ -103,7 +103,7 @@
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Street Name:"/>
+          <text value="Road Name:"/>
         </properties>
       </component>
       <component id="1963b" class="javax.swing.JTextField" binding="streetNameField">
@@ -135,10 +135,10 @@
           <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Country:"/>
+          <text value="City:"/>
         </properties>
       </component>
-      <component id="4fe7a" class="javax.swing.JTextField" binding="countryField">
+      <component id="4fe7a" class="javax.swing.JTextField" binding="cityField">
         <constraints>
           <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
