staff features added

--- a/ui/staffDashboard.form
+++ b/ui/staffDashboard.form
@@ -76,12 +76,12 @@
           <text value="Manager View"/>
         </properties>
       </component>
-      <component id="607cc" class="javax.swing.JButton" binding="pendingOrdersButton" default-binding="true">
+      <component id="607cc" class="javax.swing.JButton" binding="confirmedOrdersButton">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Pending Orders"/>
+          <text value="Confirmed Orders"/>
         </properties>
       </component>
       <component id="36fa9" class="javax.swing.JButton" binding="fulfilledOrdersButton" default-binding="true">
