--- a/ui/StaffPastOrders.form
+++ b/ui/StaffPastOrders.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.staffCatalog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.StaffPastOrders">
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -8,42 +8,39 @@
     <properties/>
     <border type="none"/>
     <children>
-      <scrollpane id="ce958" binding="scrollPane">
+      <scrollpane id="6dcd7" binding="scrollPane">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="b5d4b" class="javax.swing.JTable" binding="itemsTable">
+          <component id="62385" class="javax.swing.JTable" binding="ordersTable">
             <constraints/>
             <properties>
               <background color="-2104859"/>
               <gridColor color="-16777216"/>
-              <minimumSize width="30" height="60"/>
-              <preferredSize width="150" height="60"/>
               <rowHeight value="30"/>
               <rowSelectionAllowed value="false"/>
               <selectionBackground color="-2104859"/>
-              <showVerticalLines value="false"/>
             </properties>
           </component>
         </children>
       </scrollpane>
-      <component id="6c536" class="javax.swing.JButton" binding="backButton">
+      <component id="b54fd" class="javax.swing.JButton" binding="backToDashboardButton" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Back to dashboard"/>
         </properties>
       </component>
-      <component id="5448a" class="javax.swing.JButton" binding="addNewButton" default-binding="true">
+      <component id="28747" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add new"/>
+          <text value="Click an order to view it and change its status"/>
         </properties>
       </component>
     </children>
