--- a/ui/userDashboard.form
+++ b/ui/userDashboard.form
@@ -53,7 +53,7 @@
               <grid row="1" column="2" row-span="3" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Past Orders"/>
+              <text value="My Past Orders"/>
             </properties>
           </component>
           <component id="ff506" class="javax.swing.JButton" binding="catalogButton">
